redesign landing page dashboard
